session14-troubleshooting/02-common-issues/03-imagepull-broken.yaml
apiVersion: v1
kind: Pod
metadata:
  name: imagepull-demo
  namespace: troubleshooting-demos
spec:
  containers:
    - name: app
      image: nginx:99999-invalid
      imagePullPolicy: Always
