session14-troubleshooting/02-common-issues/04-imagepull-fixed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: imagepull-fixed
  namespace: troubleshooting-demos
spec:
  containers:
    - name: app
      image: nginx:1.27
      imagePullPolicy: IfNotPresent
