session14-troubleshooting/02-common-issues/05-errimage-broken.yaml
apiVersion: v1
kind: Pod
metadata:
  name: errimage-demo
  namespace: troubleshooting-demos
spec:
  containers:
    - name: app
      image: 192.168.99.99/nginx:latest
      imagePullPolicy: Always
