session14-troubleshooting/02-common-issues/06-errimage-fixed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: errimage-fixed
  namespace: troubleshooting-demos
spec:
  containers:
    - name: app
      image: nginx:1.27
      imagePullPolicy: IfNotPresent
