session14-troubleshooting/02-common-issues/07-pending-broken.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pending-demo
  namespace: troubleshooting-demos
spec:
  containers:
    - name: app
      image: nginx:1.27
      imagePullPolicy: IfNotPresent
      resources:
        requests:
          cpu: 999999
          memory: 999999Mi
