session14-troubleshooting/02-common-issues/09-service-broken.yaml
apiVersion: v1
kind: Service
metadata:
  name: wrong-labels-svc
  namespace: troubleshooting-demos
spec:
  selector:
    app: does-not-exist
  ports:
    - port: 80
      targetPort: 80
