session14-troubleshooting/02-common-issues/10-service-fixed.yaml
apiVersion: v1
kind: Service
metadata:
  name: correct-labels-svc
  namespace: troubleshooting-demos
spec:
  selector:
    app: correct-label
  ports:
    - port: 80
      targetPort: 80
